<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarPayment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Price">Price</string>
    <string name="downpayment">Down Payment</string>
    <string name="interestrate">Interest Rate</string>
    <string name="duration">Duration</string>
    <string name="monthlypayment">Monthly Payment</string>

</resources>
