<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context="com.example.carpayment.MainActivity" >

    <TextView
        android:id="@+id/amountTextView"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="0"
        android:labelFor="@+id/amountEditText"
        android:text="@string/Price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="6" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/amountDisplayTextView"
           android:layout_width="wrap_content"
        android:layout_height="wrap_content"
           android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="1"
        android:labelFor="@+id/customerPercentEditText"
        android:text="@string/downpayment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    
    
        <EditText
        android:id="@+id/customerPercentEditText"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="6" />
    
    
    <TextView
        android:id="@+id/customerPercentDisplayTextView"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/RateTextView"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="2"
        android:labelFor="@+id/RateEditText"
        android:text="@string/interestrate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/RateEditText"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="6"
        android:layout_row="2"
        />

    <TextView
        android:id="@+id/RateDisplayTextView"
        android:layout_column="1"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textview_padding"
        android:layout_row="2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/durationTextView"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="3"
        android:text="@string/duration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/durationDisplay"
        android:layout_width="167dp"
        android:layout_column="1"
        android:layout_gravity="start|top"
        android:layout_row="3"
        android:max="5"
        android:progress="2" />

    <TextView
        android:id="@+id/monthlyRateTextView"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="4"
        android:text="@string/monthlypayment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/monthlyRateDisplayTextView"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:layout_column="1"
        android:layout_gravity="center_vertical|top"
        android:layout_row="4"
        android:background="@android:color/holo_orange_light"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</GridLayout>